# YOLOv1-Implementation

./: .gitignore  README.md  pyproject.toml  report.md
configs/: yolo_v1_face.yaml
scripts/: download_widerface.py  evaluate.py  infer.py  plot_curves.py  prepare_data.py  train.py
src/datasets/: __init__.py  converters.py  face_dataset.py  transforms.py
src/engine/: __init__.py  evaluator.py  trainer.py
src/inference/: __init__.py  predictor.py
src/losses/: __init__.py  yolo_v1_loss.py
src/models/: __init__.py  backbone.py  head.py  yolo_v1.py
src/utils/: boxes.py  checkpoint.py  config.py  metrics.py  nms.py  visualization.py
tests/: test_project_regressions.py
